--- a/report.Rmd
+++ b/report.Rmd
@@ -53,6 +53,7 @@ Table 1 below shows the first ten rows of the data with the variables of interes
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
 # this is needed to form a table
 library(knitr)
+library(ggplot2)
 
 # gss_data.csv (reduced and cleaned raw data) is brought from the outputs folder and was created in Data.R
 gss_data = read.csv("outputs/gss_data.csv")
@@ -71,12 +72,12 @@ Multiple linear regression is a statistical technique that uses several explanat
 As discussed in the data section, the dependent variable is Life Satisfaction and the explanatory variables are Household Size, Owned, Partner, No Child and Single House.
 
 Formula and calculation of this model is as follows:
-$$y_i=\beta_0+\beta_1{x_i}_1+\beta_2{x_i}_2+\beta_3{x_i}_3+\beta_4{x_i}_4+\beta_5{x_i}_5+\beta_6{x_i}_6+\epsilon$$
+$$y_i=\beta_0+\beta_1{x_i}_1+\beta_2{x_i}_2+\beta_3{x_i}_3+\beta_4{x_i}_4+\beta_5{x_i}_5+\epsilon$$
 where, for $i=20331$ observations:\
 $y_i=$ dependent variable\
 $x_i=$ explanatory variables\
 $\beta_0=$ y-intercept (constant term)\
-$\beta_1...\beta_6=$ slope coefficients for each explanatory variable\
+$\beta_1...\beta_5=$ slope coefficients for each explanatory variable\
 $\epsilon=$ the model's error term (also known as the residuals)
 
 ```{r, echo=FALSE, warning=FALSE}
@@ -84,8 +85,45 @@ gss_model<-lm(life_satisfaction~household_size+house_owned+live_with_partner+no_
 ```
 
 
-
 # Results
+
+```{r, echo=FALSE, warning=FALSE}
+gss_summary <- summary(gss_model)$coefficients
+row.names(gss_summary)<-c("(Intercept)","Household Size","Owned","Partner","No Child","Single House")
+knitr::kable(gss_summary,digits=2, caption = "Summary of the Model")
+```
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE, results='hide'}
+relweights <-
+function(fit,...){                         
+  R <- cor(fit$model)   
+  nvar <- ncol(R)          
+  rxx <- R[2:nvar, 2:nvar] 
+  rxy <- R[2:nvar, 1]      
+  svd <- eigen(rxx)        
+  evec <- svd$vectors                           
+  ev <- svd$values         
+  delta <- diag(sqrt(ev))  
+  lambda <- evec %*% delta %*% t(evec)        
+  lambdasq <- lambda ^ 2   
+  beta <- solve(lambda) %*% rxy           
+  rsquare <- colSums(beta ^ 2)                   
+  rawwgt <- lambdasq %*% beta ^ 2    
+  import <- (rawwgt / rsquare) * 100 
+  import <- as.data.frame(import)
+  row.names(import)<-names(fit$model[2:nvar])
+  names(import)<-"Weights"
+  import<-import[order(import),1,drop=FALSE]
+  dotchart(import$Weights,labels=c("No Child","Partner","Household Size","Single House","Owned"),
+           xlab="% of R-Square",pch=19,
+           main="Figure1: Relative Importance of Predictor Variables",
+           sub=paste("Total R-Square=",round(rsquare,digits=3)),
+           ...)
+  return(import)
+}
+relweights(gss_model)
+```
+
 
 # Discussion
 
