--- a/report.Rmd
+++ b/report.Rmd
@@ -45,7 +45,7 @@ The explanation of each explanatory variable is as follows:\
 1) 'Household Size' - the number of people each respondent lives with\
 2) 'Owned' - 1 if a respondent owns the house and 0 if he/she doesn't\
 3) 'Partner' - 1 if a respondent lives with a partner and 0 if he/she doesn't\
-4) 'No Child' - 1 if a respondent doesn't have any child and 0 if he/she does\
+4) 'No Child' - 1 if no child lives in the household with the respondent and 0 if he/she does\
 5) 'Single House' - 1 if respondent's house type is single detached house and 0 if it's not 
 
 Table 1 below shows the first ten rows of the data with the variables of interest.
@@ -127,6 +127,7 @@ relweights(gss_model)
 
 # Discussion
 
+
 # References
 
 - R Core Team (2020). R: A language and environment for statistical computing. R Foundation for
@@ -141,17 +142,10 @@ relweights(gss_model)
   
 - Wickham et al., (2019). Welcome to the tidyverse. Journal of Open Source Software, 4(43), 1686. URL
   https://doi.org/10.21105/joss.01686
-  
-- Paul-Christian Bürkner (2017). brms: An R Package for Bayesian Multilevel Models Using Stan.
-  Journal of Statistical Software, 80(1), 1-28. doi:10.18637/jss.v080.i01
 
-- Paul-Christian Bürkner (2018). Advanced Bayesian Multilevel Modeling with the R Package brms. The
-  R Journal, 10(1), 395-411. doi:10.32614/RJ-2018-017
   
 - Canadian General Social Surveys (2017). General social survey on Family (cycle 31). URL https://www23.statcan.gc.ca/imdb/p2SV.pl?Function=getSurvey&Id=335816
 
-- Stan Development Team (2020). RStan: the R interface to Stan. R package version 2.21.1. URL
-  http://mc-stan.org/.
   
 - Hadley Wickham and Evan Miller (2020). haven: Import and Export 'SPSS', 'Stata' and 'SAS' Files.
   R package version 2.3.1. URL https://CRAN.R-project.org/package=haven
@@ -168,3 +162,6 @@ relweights(gss_model)
   Yihui Xie (2014) knitr: A Comprehensive Tool for Reproducible Research in R. In Victoria Stodden,
   Friedrich Leisch and Roger D. Peng, editors, Implementing Reproducible Computational Research.
   Chapman and Hall/CRC. ISBN 978-1466561595
+  
+  H. Wickham. ggplot2: Elegant Graphics for Data Analysis.
+  Springer-Verlag New York, 2016.
